# auto_trait_utils

./: Cargo.toml  license.md  readme.md
src/: lib.rs
